Fixed canvas z-index issue in projects section.

--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,5 @@
 .projects_section {
     position: relative;
-    padding-top: 5%;
-    padding-bottom: 5%;
     box-sizing: border-box;
 }
 
@@ -16,7 +14,7 @@
     transform: skewY(7.125deg);
     -webkit-transform: skewY(7.125deg);
     background-color: var(--orange-color);
-    z-index: -1; 
+    z-index: -2; 
 }
 
 
@@ -30,7 +28,7 @@
 .projects_container {
     width: 90%;
     margin: auto;
-    background-color: black;
+    background-color: transparent;
 }
 
 
@@ -73,22 +71,33 @@
     font-size: 15px;
     margin-top: 10px;
     height: 36px;
+    cursor: pointer;
+}
+
+
+.background_noise{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 5%;
+    right: 5%;
+    height: 100%;
+    width: 90%;
+    background-color: black;
+    z-index: -1;
 }
 
 
  .noise {
     position: absolute;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
     opacity: 0.1;
     background-color: white;
-    padding-top: 5%; 
-    padding-bottom: 5%; 
-    padding-left: 5%; 
-    padding-right: 5%; 
-    box-sizing: border-box;
 }
 
 
@@ -114,9 +123,10 @@
         width: 100%;
     }
 
-
-    .noise {
-        padding-left: 0; 
-        padding-right: 0; 
+    
+    .background_noise {
+        left: 0;
+        right: 0;
+        width: 100%;
     }
 }
